# vibe

./: README.md
mcp-java-indexer/: .gitignore  GENERATE_PROMPT.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
mcp-java-indexer/cli/: main.py
mcp-java-indexer/docs/: README.md  api-reference.md  architecture.md  file-structure.md
mcp-java-indexer/docs/components/: cache.md  mcp-server.md  parser.md
mcp-java-indexer/java-analyzer/: .gitignore  README.md  SETUP.md  SKILL.md  __init__.py  requirements.txt  test_compact.json  test_naonfile_ultra.json  test_ultra.json
mcp-java-indexer/java-analyzer/cache/: cache_store.py
mcp-java-indexer/java-analyzer/cli/: main.py
mcp-java-indexer/java-analyzer/parser/: formatters.py  indexer.py  readers.py
mcp-java-indexer/java-analyzer/tests/: test_formatters.py  test_indexer.py  test_javadoc.py  test_snapshots.py
mcp-java-indexer/java-analyzer/tests/expected/: AnnotationsAndOverloads.json  InnerClassJavadoc.json  JavadocOnly.json  MultiLineSignature.json  NestedClasses.json  SimpleClass.json
mcp-java-indexer/java-analyzer/tests/fixtures/: AnnotationsAndOverloads.java  InnerClassJavadoc.java  JavadocOnly.java  JavadocWithAnnotation.java  (+2 more)
mcp-java-indexer/mcp_server/: handlers.py  server.py
mcp-java-indexer/parser/: ast_utils.py  javadoc.py  readers.py
mcp-java-indexer/tests/: conftest.py  test_read_range.py  test_snapshots.py
mcp-java-indexer/tests/expected/: JavadocWithAnnotation.json  RecordEnumInterface.json
mcp-java-indexer/tests/fixtures/: MultiLineSignature.java  RecordEnumInterface.java
(+16 files in other folders)
